crates/plotnik-lib/tests/snapshots/conformance__soft_anchor_skips_extra_but_not_token.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement (array "," . (number) @n)))

==== source ====
[1, /* c */ 2]

==== types ====
export interface Q {
  n: Node;
}

==== result ====
{"n":{"kind":"number","text":"2","span":[12, 13]}}
