crates/plotnik-lib/tests/snapshots/conformance__strict_anchor_rejects_comment_between.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement (array "," .! (number) @n)))

==== source ====
[1, /* c */ 2]

==== types ====
export interface Q {
  n: Node;
}

==== result ====
<no match>
