crates/plotnik-lib/tests/snapshots/conformance__strict_anchor_requires_true_adjacency.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement (array "," .! (number) @n)))

==== source ====
[1, 2]

==== types ====
export interface Q {
  n: Node;
}

==== result ====
{"n":{"kind":"number","text":"2","span":[4, 5]}}
