crates/plotnik-lib/tests/snapshots/conformance__string_annotation_on_array_capture.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (lexical_declaration (variable_declarator (identifier))+ @ids :: string))

==== source ====
let a, b;

==== types ====
export interface Q {
  ids: [string, ...string[]];
}

==== result ====
{"ids":["a","b"]}
