crates/plotnik-lib/tests/snapshots/conformance__supertype_pattern_silently_never_matches.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (statement)* @s)

==== source ====
let x;

==== types ====
export interface Q {
  s: Node[];
}

==== result ====
{"s":[]}
