crates/plotnik-lib/tests/snapshots/conformance__suppressed_optional_node_at_child_emits_no_value.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement)? @_)

==== source ====
a;

==== types ====
export type Q = undefined;

==== result ====
null
