crates/plotnik-lib/tests/snapshots/conformance__tagged_variant_array_with_skippable_boundary.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program ([Tag: {(expression_statement) @a (comment)?}])* @items)

==== source ====
a; b;

==== types ====
export interface QItemsTag {
  $tag: "Tag";
  $data: { a: Node };
}

export type QItems = QItemsTag;

export interface Q {
  items: QItems[];
}

==== result ====
{"items":[{"$tag":"Tag","$data":{"a":{"kind":"expression_statement","text":"a;","span":[0, 2]}}},{"$tag":"Tag","$data":{"a":{"kind":"expression_statement","text":"b;","span":[3, 5]}}}]}
