crates/plotnik-lib/tests/snapshots/conformance__tagged_variant_captured_suppressed.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program [Tag: (expression_statement) @_])

==== source ====
a;

==== types ====
export interface QTag {
  $tag: "Tag";
}

export type Q = QTag;

==== result ====
{"$tag":"Tag"}
